--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,20 +1,20 @@
 <head>
   
-  <!-- New content ported from previous site -->
+  <!-- Ported from previous site -->
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=no" />
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>junesgloom</title>
+  <title>gloomwaif</title>
 
   <!-- CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="{{ "/assets/css/base.css" | relative_url }}">
 
   <!-- ICON -->
-  <!-- <link rel="icon" type="image/ico" href="{ static "base/img/satsuki.ico" }"> -->
+  <link rel="icon" type="image/ico" href="{{ "/assets/img/gloomwaif.png" | relative_url }}">
 
   <!-- FONTS -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
