--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -34,7 +34,7 @@ layout: default
                 <div class="d-md-none">
                     <h2 class="glow-title">
                         <div class="d-md-none"></div>
-                        <a class="text-decoration-none" href="{{ site.url }}">
+                        <a class="text-decoration-none" href="{{ page.url }}">
                             {{ page.title | escape }}
                         </a>
                     </h2>
@@ -47,7 +47,7 @@ layout: default
                 <!-- Display on larger devices -->
                 <div class="d-none d-md-block">
                     <h2 class="glow-title">
-                        <a class="text-decoration-none right-title" href="{{ site.url }}">
+                        <a class="text-decoration-none right-title" href="{{ page.url }}">
                             {{ page.title | escape }}
                         </a>
                     </h2>
@@ -120,6 +120,10 @@ layout: default
                     <div class="code-box">
                         <div class="post-content">
                             <div class="d-block">
+
+                                <p>
+                                    {{ page.date | date: "Posted on %A, %m/%d/%y." }}
+                                </p>
 
                                 {{ content }}
 
