--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,16 @@ layout: replace
 
   {%- include head.html -%}
 
+  <!-- ga -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-45H37TRMT8"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-45H37TRMT8');
+  </script>
+
   <body>
 
     <main class="page-content" aria-label="Content">
